--- a/SingleResponsibilityPrinciple/Views/_ViewImports.cshtml
+++ b/SingleResponsibilityPrinciple/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using SingleResponsibilityPrinciple
 @using SingleResponsibilityPrinciple.Models
+@using SingleResponsibilityPrinciple.Controllers
+@using SingleResponsibilityPrinciple.Helpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
